// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurriculumVitae /> should render empty 1`] = `
.c2 {
  font-family: "IBM Plex Mono";
  font-weight: 700;
  grid-column-start: 3;
  font-size: 1.75rem;
  line-height: 2.25rem;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
  font-weight: 400;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c3 {
  list-style: none;
  position: relative;
}

.c3 >li:not(:first-child) {
  margin-top: 0.5rem;
}

.c0 {
  grid-column-start: 3;
  margin-top: 1rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="luottamustoimet"
    >
      Luottamustoimet
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    />
  </div>
  <br />
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="tyokokemus"
    >
      Työkokemus
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    />
  </div>
  <br />
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="koulutus"
    >
      Koulutus
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    />
  </div>
</div>
`;

exports[`<CurriculumVitae /> should render full 1`] = `
.c2 {
  font-family: "IBM Plex Mono";
  font-weight: 700;
  grid-column-start: 3;
  font-size: 1.75rem;
  line-height: 2.25rem;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "IBM Plex Sans";
  font-weight: 400;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.c4 {
  margin-left: 1.25rem;
}

.c4:before {
  color: rgb(0, 98, 114);
  content: "»";
  left: 0;
  position: absolute;
}

.c3 {
  list-style: none;
  position: relative;
}

.c3 >li:not(:first-child) {
  margin-top: 0.5rem;
}

.c0 {
  grid-column-start: 3;
  margin-top: 1rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="luottamustoimet"
    >
      Luottamustoimet
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        Toimitilapalvelujen lautakunnan varajäsen
        , 
        Kirkkonummen kunta
         - 
        2023-
      </li>
      <li
        class="c4"
      >
        Hallituksen varajäsen
        , 
        Kirkkonummen Vihreät
         - 
        2023-
      </li>
      <li
        class="c4"
      >
        Länsi-Uudenmaan pelastuslaitos -liikelaitoksen johtokunnan varajäsen
        , 
        Länsi-Uudenmaan hyvinvointialue
         - 
        2022-
      </li>
      <li
        class="c4"
      >
        Suomenkielisen kasvatus- ja koulutuslautakunnan varajäsen
        , 
        Kirkkonummen kunta
         - 
        2021-
      </li>
      <li
        class="c4"
      >
        Perusturvajaoston jäsen
        , 
        Kirkkonummen kunta
         - 
        2021-2022
      </li>
      <li
        class="c4"
      >
        KV-kapteeni
        , 
        Informaatioverkostojen kilta Athene
         - 
        2015
      </li>
      <li
        class="c4"
      >
        Hallituksen puheenjohtaja
        , 
        Aalto Predators
         - 
        2014-2015
      </li>
      <li
        class="c4"
      >
        Hallituksen jäsen
        , 
        Aalto Predators
         - 
        2013
      </li>
      <li
        class="c4"
      >
        Nuorisovaltuuston hallituksen puheenjohtaja
        , 
        Kirkkonummen kunta
         - 
        2010
      </li>
    </ul>
  </div>
  <br />
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="tyokokemus"
    >
      Työkokemus
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        Team Lead
        , 
        Verkkokauppa.com
         (
        Helsinki
        ) - 
        2022-
      </li>
      <li
        class="c4"
      >
        Software developer
        , 
        Verkkokauppa.com
         (
        Helsinki
        ) - 
        2019-2022
      </li>
      <li
        class="c4"
      >
        Software developer
        , 
        Gofore
         (
        Helsinki
        ) - 
        2018-2019
      </li>
      <li
        class="c4"
      >
        Software engineer
        , 
        Zalando
         (
        Helsinki
        ) - 
        2017-2018
      </li>
      <li
        class="c4"
      >
        Software developer
        , 
        Futurice
         (
        Helsinki
        ) - 
        2015-2017
      </li>
      <li
        class="c4"
      >
        Software developer
        , 
        Pulmaton Solutions Oy
         (
        Helsinki
        ) - 
        2014
      </li>
      <li
        class="c4"
      >
        Seasonal trainee
        , 
        Nokia Solutions & Networks
         (
        Espoo
        ) - 
        2013
      </li>
    </ul>
  </div>
  <br />
  <div
    class="c1"
  >
    <h2
      class="c2"
      id="koulutus"
    >
      Koulutus
    </h2>
  </div>
  <div
    class="c1"
  >
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        Diplomi-insinööri (informaatioverkostot)
        , 
        Aalto-yliopisto
         (
        Espoo
        ) - 
        2012-2018
      </li>
      <li
        class="c4"
      >
        Datanomi
        , 
        Omnia ammattiopisto
         (
        Kirkkonummi
        ) - 
        2007-2011
      </li>
      <li
        class="c4"
      >
        Ylioppilas
        , 
        Masalan lukio
         (
        Kirkkonummi
        ) - 
        2007-2011
      </li>
    </ul>
  </div>
</div>
`;
